[package]
name = "lszr"
version = "0.1.0"
authors = ["ryokik <ryokik@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.45"

console_error_panic_hook = { version = "0.1.6", optional = true }

# futures = "0.1.27"
js-sys = "0.3.22"
# wasm-bindgen-futures = "0.3.22"
podio = "0.1.6"
encoding_rs = "0.8.17"
libflate = "0.1.23"
rust-crypto-wasm = "0.3.1"
hex = "0.3.2"
failure = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"

[profile.release]
opt-level = 3
lto = true
